--- a/public/style.css
+++ b/public/style.css
@@ -9,24 +9,28 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 90vh;
+    /* height: 100%; */
     background-image: url("./back.jpg");
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     font-family: 'Roboto', sans-serif;
 }
 section.chat__section {
     width: 600px;
     max-width: 90%;
     background-image: url("./body.jpg");
-    background-size: 100% 100%;
+    background-size: cover;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .brand {
+    position: sticky;
+    top: 0px;
     padding: 20px;
     background: #035f0b;
     display: flex;
     align-items: center;
+    z-index: 2;
 }
 .brand h1 {
     font-size: 20px;
@@ -60,6 +64,7 @@ section.chat__section {
 
 .joinedPara{
     align-self: center;
+    margin-top: 10px;
     margin-bottom: 20px;
     box-shadow: 5px 5px 8px #888888;
     padding: 5px 10px;
@@ -77,10 +82,12 @@ textarea {
 }
 
 .message {
+    overflow-wrap: break-word;
     padding: 20px; 
     margin-bottom: 40px;
     max-width: 300px;
     position: relative;
+    font-size: small;
 }
 .incoming {
     background: #750379;
@@ -108,3 +115,15 @@ textarea {
     font-size: 10px;
     padding-bottom: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+    section.chat__section{
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        max-width: 100%;
+    }
+    .message__area{
+        height: 81.5vh;
+    }
+  }
